--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --gradient-background: radial-gradient(125% 125% at 50% 10%, #000 40%, rgb(21, 15, 39) 100%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --gradient-background: radial-gradient(125% 125% at 50% 10%, #000 40%, rgb(30, 21, 55) 100%);
   }
 }
 
@@ -18,4 +20,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -10;
+  background: var(--gradient-background);
+  width: 100%;
+  height: 100%;
 }
